tarifa cadastrando ok

--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -74,6 +74,11 @@ $(".movebottom").on("click", function() {
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("tarifa-intermunicipal") ?>">
+                                Tarifas Intermunicipais
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="<?= $this->baseUrl("concessaotrajeto") ?>">
                                 Concessões
                             </a>
