--- a/application/views/scripts/compra/index.phtml
+++ b/application/views/scripts/compra/index.phtml
@@ -51,7 +51,7 @@
                                     </a>
                                 </div>
                                 <div class="col-lg-2">
-                                    <label>Validade:</label>
+                                    <label>Data da Viagem:</label>
                                     <input type="text" class="form-control datedropper" id="data_inicio" data-format="d/m/Y" data-large-mode="true" data-large-default="true" data-lock=""  data-translate-mode="true" data-lang="pt" data-theme="my-style" data-max-year="2030">
                                     <!--data-lock="form"-->
                                 </div>
@@ -221,28 +221,28 @@
 
                     <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="13">13</option>
                     <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="14">14</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">15</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">16</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="15">15</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="16">16</option>
 
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">17</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="">18</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">19</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">20</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="17">17</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="18">18</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="19">19</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="20">20</option>
 
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">21</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="">22</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">23</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">24</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="21">21</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="22">22</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="23">23</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="24">24</option>
 
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">25</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="">26</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">27</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">28</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="25">25</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="26">26</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="27">27</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="28">28</option>
 
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">29</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="">30</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">31</option>
-                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="">32</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="29">29</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="margin-right: 33%; height: 40px; padding: 7px;" title="" value="30">30</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="31">31</option>
+                    <option class="btn btn-success btn-block btn-labeled col-lg-2 float-left poltrona" style="height: 40px; padding: 7px;" title="" value="32">32</option>
                 </select>
             </div>
             <div class="modal-footer">
