--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -42,6 +42,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("sinistro") ?>">
+                                Sinistro
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="<?= $this->baseUrl("forma-pagamento") ?>">
                                 Formas de Pagamento
                             </a>
