guiche vendendo bombando

--- a/application/views/scripts/compra/index.phtml
+++ b/application/views/scripts/compra/index.phtml
@@ -77,11 +77,11 @@
                                 <div class="col-lg-2">
                                     <label>Seguro:</label>
                                     <div class="btn-group col-lg-offset-5" id="status" data-toggle="buttons">
-                                        <label class="btn btn-default btn-on" >
+                                        <label class="btn btn-default btn-on seguro-on" >
                                             <input type="radio" name="switch" checked="checked">
                                             SIM
                                         </label>
-                                        <label class="btn btn-default btn-off active" >
+                                        <label class="btn btn-default btn-off seguro-off active" >
                                             <input type="radio" name="switch">
                                             NÃO
                                         </label>
